--- a/api/src/public/css/output.css
+++ b/api/src/public/css/output.css
@@ -554,14 +554,6 @@ video {
   --tw-contain-style:  ;
 }
 
-.z-10 {
-  z-index: 10;
-}
-
-.z-20 {
-  z-index: 20;
-}
-
 .flex {
   display: flex;
 }
@@ -578,6 +570,10 @@ video {
   height: 8rem;
 }
 
+.min-h-24 {
+  min-height: 6rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -588,6 +584,10 @@ video {
 
 .min-w-full {
   min-width: 100%;
+}
+
+.min-w-20 {
+  min-width: 5rem;
 }
 
 .grid-cols-3 {
@@ -628,10 +628,6 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded {
-  border-radius: 0.25rem;
 }
 
 .bg-neutral-500 {
@@ -677,12 +673,25 @@ video {
   padding: 0.25rem;
 }
 
+.p-20 {
+  padding: 5rem;
+}
+
 .p-4 {
   padding: 1rem;
 }
 
 .p-8 {
   padding: 2rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .text-center {
@@ -697,6 +706,16 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .font-bold {
