--- a/src/public/views/index.html
+++ b/src/public/views/index.html
@@ -20,6 +20,8 @@
                 <button id="createButton" class="bg-slate-200 hover:bg-slate-300 transition-all hover:text-emerald-600 rounded-md font-bold text-emerald-800 p-1">Create Room</button>
             </form>
         </div>
+        <br>
+        <div id="rooms" class="bg-gradient-to-b from-slate-50 to-slate-200 text-black p-3 lg:p-8 rounded-lg flex-col"></div>
     </main>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script type="module" src="js/mainMenu.js"></script>
